 * Changed behaviour of ExponentialCauchy

==== New classes ====
 * OptimizationSolver
 * OptimizationProblem

==== API changes ====
 * Removed BoundConstrainedAlgorithm class
 * Removed NearestPointAlgorithm class
 * Deprecated AbdoRackwitz|Cobyla|SQP::[gs]etLevelFunction|[gs]etLevelValue
 * Deprecated (AbdoRackwitz|Cobyla|SQP|TNC)SpecificParameters classes
 * Removed ConfidenceInterval class
 * Removed draw method to CovarianceModel
 * Removed CovarianceModel::getParameters
 * Added CovarianceModel::getParameter
 * Added CovarianceModel::getParameterDescription

=== Python module ===
 * Support infix operator for matrix multiplication (PEP465)

=== Miscellaneous ===
 * Enhanced print of samples

=== Bug fixes ===
 * #790 (AbdoRackwitz parameters)
 * #796 (Beta distribution: if sample contains Inf, freeze on getSample)
 * #798 (Error message misstyping (Gamma distribution))
 * #799 (Error message misstyping (Gumbel distribution factory))

== 1.6 release (2015-08-14) == #release-1.6

=== Library ===

==== Major changes ====
 * Improved encapsulation of hmat-oss to use H-Matrices in more classes
 * Kriging metamodelling becomes vectorial
 * Conditional normal realizations
 * Polynomial chaos performance improvements (#413)

==== New classes ====
 * VonMises, distribution
 * Frechet, distribution
 * ParametrizedDistribution, to reparametrize a distribution
 * DistributionParameters, ArcsineMuSigma, BetaMuSigma, GumbelAB, GumbelMuSigma, GammaMuSigma, LogNormalMuSigma, LogNormalMuSigmaOverMu, WeibullMuSigma parameters
 * PolygonArray, allows to draw a collection of polygons
 * MarginalDistribution, MaximumDistribution, RatioDistribution, arithmetic distributions
 * KrigingRandomVector
 * ConditionalNormalProcess
 * MetaModelValidation, for the validation of a metamodel

==== API changes ====
 * Added a new draw3D() method based on Euler angles to the Mesh class.